update Style Excepion/Logging